--- a/WebApplication4/appsettings.json
+++ b/WebApplication4/appsettings.json
@@ -7,14 +7,24 @@
   },
   "AllowedHosts": "*",
 
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=dbboot;Trusted_Connection=True;TrustServerCertificate=True;"
-  },
-  "Authentication": {
-    "ApiUrl": "https://demo-acarreos.smartflow.com.mx",
-    "ClientId": "private.networking.app",
-    "ClientSecret": "UxwYJsELeTnSc2Zz642K"
+  
+    "ConnectionStrings": {
+      "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=dbboot;Trusted_Connection=True;TrustServerCertificate=True;"
+      // "DefaultConnection": Define la cadena de conexión predeterminada para la base de datos.
+      // "Server=localhost\\SQLEXPRESS": Especifica el servidor SQL al que se conectará la aplicación (en este caso, una instancia local de SQL Server Express).
+      // "Database=dbboot": Especifica el nombre de la base de datos a la que se conectará.
+      // "Trusted_Connection=True": Indica que la conexión utilizará la autenticación de Windows.
+      // "TrustServerCertificate=True": Indica que la aplicación confiará en el certificado del servidor SQL, incluso si no está firmado por una autoridad de certificación de confianza.
+    },
+    "Authentication": {
+      "ApiUrl": "https://demo-acarreos.smartflow.com.mx",
+      // "ApiUrl": La URL base de la API a la que la aplicación se conectará para la autenticación y otros servicios.
+      "ClientId": "private.networking.app",
+      // "ClientId": El identificador de cliente utilizado para autenticarse con la API.
+      "ClientSecret": "UxwYJsELeTnSc2Zz642K"
+      // "ClientSecret": El secreto del cliente utilizado junto con el ClientId para autenticarse con la API.
+    }
   }
 
 
-}
+
